--- a/index.html
+++ b/index.html
@@ -235,4 +235,53 @@ The key elements of effective communication include:
   During my sophomore year in high school, we were tasked with completing a group assignment. Due to the COVID-19 lockdown, our collaboration was limited to online means. The lack of communication within the group led to numerous misunderstandings, which significantly slowed down the progress of our project. After reflecting on my communication class, I realize that I could have facilitated more effective discussions by creating interactive Discord groups where everyone could freely express their perspectives, ideas, and concerns. Thus, we could have improved the project's quality and distributed the workload more evenly among the team members, resulting in a faster turnaround.
 </p>
   </body>
+
+<head>
+  <title>CIS1250_WA7_NayyabGul</title>
+  <meta name="google" content="notranslate">
+</head>
+
+<body>
+  <h1>Worksheet 7 </h1>
+  <p>
+   Write a short paragraph (up to 300 words) on one of the design principles we discussed
+in class last week. Select and state one of the design principles that you want to work
+on for your assignment. Define the design principle in your own words and discuss its
+importance in the context of software design. Identify and describe two examples of
+where you noticed or encountered this principle (it can be in software or any other
+domain). Explain how the design principle was used or should have been used to
+enhance the user experience.
+</p>
+  
+  <p>Accessibility is a really important principle in software design so that a software product can
+    be accessed and used by all users despite their different demographics and abilities. It encompasses 
+    operability, simplicity and predictability for a better user experience by creating easily navigable
+    interfaces, presenting information clearly and straightforwardly, and providing information in
+    multiple modalities. Accessibility means creating interfaces and functionalities that are inclusive
+    and accommodating to a wide range of users. 
+</p>
+  <p>One of the examples of the use of accessibility principles in the software industry is the screen
+    reading software which allows users with visual impairment to benefit from the product. It can allow 
+    users to navigate websites and applications, read text and interact with digital content, as well as
+    facilitate users by providing alternate texts for images and other visual content so that individuals
+    with visual impairment can also engage in multimedia content.
+</p>
+  <p>In addition, the innovation of audiobooks has benefitted people with dyslexia and other learning 
+    disabilities. This allows users to listen to the text being read out loud so that users can use
+    their auditory strengths to fully understand and enjoy the text of their desired books. This provides 
+    an accessible format for individuals who struggle with traditional reading methods, as well as its 
+    features like adjustable narration speed, bookmarks, and highlighting also enhance user experience by 
+    making it more personal and customized. Audiobooks are a great alternative and inclusive format to 
+    eliminate the barriers to reading and allow individuals to fully engage with the content despite their
+    disabilities.
+
+</p>
+  <p> By ensuring equal access and inclusivity for all users, accessibility promotes a user experience 
+    that is welcoming and accommodating to individuals with diverse abilities and disabilities. 
+    The benefits of accessibility are far-reaching, as it not only removes barriers and facilitates
+    usability but also creates a sense of inclusiveness and equal opportunity.
+</p>
+  </body>
+  
+    
           </html>
