--- a/index.html
+++ b/index.html
@@ -282,6 +282,45 @@ enhance the user experience.
     usability but also creates a sense of inclusiveness and equal opportunity.
 </p>
   </body>
-  
+  <head>
+  <title>CIS1250_WA_NayyabGul</title>
+  <meta name="google" content="notranslate">
+</head>
+
+<body>
+  <h1>Worksheet 8 </h1>
+  <p>
+Write a short paragraph (up to 300 words) on the ethical implications of deceptive (dark)
+patterns. Pick a type of deceptive pattern from the following website
+https://www.deceptive.design/types and discuss how this type of pattern violates the
+ethical principles outlined in ACM’s code of ethics. You are expected to explicitly state
+which principle is violated and explain why.
+</p>
+  <p>Deceptive  software development techniques are tactics used by websites and applications
+    to trick users into performing unintended actions.A notable example is the use of fake 
+    social proof. Fake recommendations exploit users' trust in social validation and influence 
+    their purchasing decisions with manipulated information. This approach raises ethical 
+    concerns and violates the principles outlined in the ACM Code of Ethics.
+</p>
+  <p> An important compromise principle is "honesty and trustworthiness”. Providing false 
+    information to convince users to buy will erode trust, especially if the actual product 
+    falls short of expectations.This deception undermines the integrity of technology products
+    and undermines user trust.</p>
+  <p> The other principle that is compromised is “Avoid Harm”. Fake social proof causes users 
+    financial harm since the delivered products and services are not up to the price users are
+    paying for those products. Moreover, such deceptions can cause users to have feelings of 
+    betrayal, frustration and disappointment resulting in mental harm to users.</p>
+  <p>
+     The other principle that is compromised is “Avoid Harm”. Fake social proof causes
+    users financial harm since the delivered products and services are not up to the
+    price users are paying for those products. Moreover, such deceptions can cause users
+    to have feelings of betrayal, frustration and disappointment resulting in mental harm to users.
+  </p>
+  <p>In summary, fake social proof, as a deceptive pattern, not only misleads and harms users
+    but also obstructs fair competition and violates ethical principles. Addressing these concerns
+    is critical to maintaining trust in digital interactions and ensuring a level playing field 
+    for businesses in the technology environment.
+</p>
+  </body>
     
           </html>
