--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@ which principle is violated and explain why.
     paying for those products. Moreover, such deceptions can cause users to have feelings of 
     betrayal, frustration and disappointment resulting in mental harm to users.</p>
   <p>
-     The other principle that is compromised is “Avoid Harm”. Fake social proof causes
-    users financial harm since the delivered products and services are not up to the
-    price users are paying for those products. Moreover, such deceptions can cause users
-    to have feelings of betrayal, frustration and disappointment resulting in mental harm to users.
+    Additionally, businesses that use deceptive tactics such as fake social proof not only damage
+    the reputations of honest businesses but also create an unfair competitive environment. This 
+    violates the principles of fairness and non-discrimination. It also undermines fair competition
+    in the marketplace and places companies that engage in ethical practices at a disadvantage.
   </p>
   <p>In summary, fake social proof, as a deceptive pattern, not only misleads and harms users
     but also obstructs fair competition and violates ethical principles. Addressing these concerns
